hphp/test/slow/reified_generics/error-function-call-3.php.expectf
Fatal error: Function f requires 1 reified generics but 2 given in %s on line 3
